xedoc-rs/tui-composer/src/bottom_pane/snapshots/xedoc_tui_composer__bottom_pane__chat_composer__tests__runtime_context_idle_and_active_styles.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: "frames.join(\"\\n\\n\")"
---
idle standard
text:        ╰──────────────── gpt-5.6-terra│medium ╯
model_color:                   ^^^^^^^^^^^^^
effort_color:                                 ^^^^^^
pipe_color:                                 ^
red:         <none>
background:                   ^^^^^^^^^^^^^^^^^^^^^^

idle fast
text:        ╰───────── gpt-5.6-terra│medium ─ fast ╯
model_color:            ^^^^^^^^^^^^^
effort_color:                          ^^^^^^
pipe_color:                          ^
red:                                           ^^^^
background:            ^^^^^^^^^^^^^^^^^^^^^^ ^^^^^^

active standard
text:        ╰─────────── gpt-5.6-terra│medium ─ 5s ╯
model_color:              ^^^^^^^^^^^^^
effort_color:                            ^^^^^^
pipe_color:                            ^
red:         <none>
background:              ^^^^^^^^^^^^^^^^^^^^^^ ^^^^

active fast
text:        ╰──── gpt-5.6-terra│medium ─ fast ─ 5s ╯
model_color:       ^^^^^^^^^^^^^
effort_color:                     ^^^^^^
pipe_color:                     ^
red:                                      ^^^^
background:       ^^^^^^^^^^^^^^^^^^^^^^ ^^^^^^ ^^^^
